--- a/adev/src/content/reference/errors/NG01203.md
+++ b/adev/src/content/reference/errors/NG01203.md
@@ -19,6 +19,7 @@ providers: [
 As described above, your control was expected to have a value accessor, but was missing one. However, there are many different reasons this can happen in practice. Here's a listing of some known problems leading to this error.
 
 1. If you **defined** a custom form control, did you remember to provide a value accessor?
+1. Are you supplying an input called `formControl` to a component not intended to be a custom form control? Rename the `formControl` input to a different name (e.g. `control`).
 1. Did you put `ngModel` on an element with no value, or an **invalid element** (e.g. `<div [(ngModel)]="foo">`)?
 1. Are you using a custom form control declared inside an `NgModule`? if so, make sure you are **importing** the `NgModule`.
 1. Are you using `ngModel` with a third-party custom form control? Check whether that control provides a value accessor. If not, use **`ngDefaultControl`** on the control's element.
